<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_display_resource"
        android:onClick="menuItem1ClickHandler"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:title="@string/image_resource" />
    <item
        android:id="@+id/action_display_asset"
        android:onClick="menuItem2ClickHandler"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:title="@string/menuItem2" />
</menu>
