<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_userRegisterTop"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@color/theme_color"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_userRegister_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@drawable/btn_back" />

        <TextView
            android:id="@+id/lab_userRegister_title"
            style="@style/txtAddressStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:text="@string/lab_register"
            android:textSize="22sp" />
    </RelativeLayout>
    <!-- 用户注册 -->
    <LinearLayout
        android:id="@+id/layout_user_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/layoutbg1"
        android:orientation="vertical">
        <!-- 联系人 -->
        <RelativeLayout
            android:id="@+id/send_row_contact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lab_registerName"
                style="@style/txtSendStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/lab_register_name" />

            <EditText
                android:id="@+id/edit_registerName"
                style="@style/editSendStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_toRightOf="@+id/lab_registerName"
                android:hint="@string/hint_username" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="@drawable/div_line" />
        <!-- 登陆邮箱 -->
        <RelativeLayout
            android:id="@+id/user_register_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="15dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lab_register_email"
                style="@style/txtSendStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/lab_email" />

            <EditText
                android:id="@+id/edit_register_email"
                style="@style/editSendStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_toRightOf="@+id/lab_register_email"
                android:hint="@string/hint_email" />
        </RelativeLayout>
    </LinearLayout>
    <!-- 密码 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="20dip"
        android:background="@drawable/layoutbg1"
        android:orientation="vertical">
        <!-- 密码 -->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lab_register_pawd"
                style="@style/txtSendStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/lab_password" />

            <EditText
                android:id="@+id/edit_register_pawd"
                style="@style/editSendStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_toRightOf="@+id/lab_register_pawd"
                android:hint="@string/hint_password"
                android:password="true" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="@drawable/div_line" />
        <!-- 重复输入密码 -->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lab_register_pawd2"
                style="@style/txtSendStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/lab_password2" />

            <EditText
                android:id="@+id/edit_register_pawd2"
                style="@style/editSendStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_toRightOf="@+id/lab_register_pawd2"
                android:hint="@string/hint_password2"
                android:password="true" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/layoutbg1"
        android:orientation="vertical">
        <!-- 手机 -->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lab_registerPhone"
                style="@style/txtSendStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/lab_send_phone" />

            <EditText
                android:id="@+id/edit_registerPhone"
                style="@style/editSendStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_toRightOf="@+id/lab_registerPhone"
                android:phoneNumber="true" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="@drawable/div_line" />
        <!-- QQ、 -->
        <RelativeLayout
            android:id="@+id/send_row_qq"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lab_registerQQ"
                style="@style/txtSendStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/lab_send_qq" />

            <EditText
                android:id="@+id/edit_registerQQ"
                style="@style/editSendStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_toRightOf="@+id/lab_registerQQ"
                android:phoneNumber="true" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/btn_red_selector"
        android:minWidth="100dip"
        android:padding="10dip"
        android:text="@string/btn_submit"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>
