<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:background="@color/color_eee"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/lab_list_sel_category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableRight="@drawable/abc_spinner_ab_disabled_holo_light"
        android:ellipsize="end"
        android:gravity="center_vertical|center_horizontal"
        android:singleLine="true"
        android:text="@string/lab_list_category_all"
        android:textColor="@color/font_666" />

    <ImageView
        android:layout_width="1dip"
        android:layout_height="fill_parent"
        android:layout_marginBottom="3dip"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="3dip"
        android:background="@color/color_ddd" />

    <TextView
        android:id="@+id/lab_list_sel_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableRight="@drawable/abc_spinner_ab_disabled_holo_light"
        android:ellipsize="end"
        android:gravity="center_vertical|center_horizontal"
        android:singleLine="true"
        android:text="@string/lab_main_address"
        android:textColor="@color/font_666" />

    <ImageView
        android:layout_width="1dip"
        android:layout_height="fill_parent"
        android:layout_marginBottom="3dip"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="3dip"
        android:background="@color/color_ddd" />

    <TextView
        android:id="@+id/lab_list_sel_street"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableRight="@drawable/abc_spinner_ab_disabled_holo_light"
        android:ellipsize="end"
        android:gravity="center_vertical|center_horizontal"
        android:singleLine="true"
        android:text="@string/lab_location_region"
        android:textColor="@color/font_666"
        android:visibility="gone" />

    <ImageView
        android:layout_width="1dip"
        android:layout_height="fill_parent"
        android:layout_marginBottom="3dip"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="3dip"
        android:background="@color/color_ddd"
        android:visibility="gone" />

    <TextView
        android:id="@+id/lab_list_sel_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableRight="@drawable/abc_spinner_ab_disabled_holo_light"
        android:ellipsize="end"
        android:gravity="center_vertical|center_horizontal"
        android:singleLine="true"
        android:text="@string/lab_list_type"
        android:textColor="@color/font_666" />
</LinearLayout>